--- a/inputgen/inputdescs/vault_desc.yml
+++ b/inputgen/inputdescs/vault_desc.yml
@@ -20,13 +20,6 @@ vault_service_url:
   source_vars:
     - primary_site_admin_tenant_base_url
 
-vault_image_version:
-  description: The version of the vault API that you wish to deploy.
-  example: latesst, dev, stage, 1.0.0
-  source_vars: 
-    - vault_image_version 
-    - tapis_image_version 
-
 vault_storage_class:
   description: Kubernetes storage class to use for peristent volume claim used to persist data written by the database.
   source_vars:
@@ -46,6 +39,10 @@ vault_pvc:
   source_vars:
     - vault_pvc
   example: vault-vol01
+
+vault_image:
+  description: The Docker image to use for the Vault server.
+  value: vault:1.8.3
 
 vault_raft_storage:
   description: Whether or not to use RAFT storage with this Vault instance. Setting to true should be the preference, as it allows for doing backups without stopping Vault.
