--- a/templates/proxy/proxy-config.yml
+++ b/templates/proxy/proxy-config.yml
@@ -7,7 +7,7 @@ data:
     {
       "service_site_url": "{{proxy_service_url}}",
       "service_tenant_id": "{{proxy_service_tenant_id}}",
-      "site_id": "{{proxy_site_id}}",
+      "site_id": "{{proxy_service_site_id}}",
       "service_name": "{{proxy_service_name}}",
       "primary_site_admin_tenant_base_url": "{{proxy_primary_site_admin_tenant_base_url}}",
       "tenants": {{proxy_service_tenants|tojson}}
