--- a/templates/skadmin/initialLoad/tapis-apps-secrets.json
+++ b/templates/skadmin/initialLoad/tapis-apps-secrets.json
@@ -13,7 +13,18 @@
         "dbcredential":[
             {
                 "tenant":     "{{skadmin_service_tenant_id}}",
-                "user":       "tapis",
+                "user":       "tapis_app",
+                "secretName": "passwords",
+                "dbservice":  "postgres",
+                "dbhost":     "apps-postgres",
+                "dbname":     "tapisappdb",
+                "secret":     "<generate-secret>",
+                "kubeSecretName": "tapis-apps-secrets",
+                "kubeSecretKey":  "postgres-user-password"
+            },
+            {
+                "tenant":     "{{skadmin_service_tenant_id}}",
+                "user":       "postgres",
                 "secretName": "passwords",
                 "dbservice":  "postgres",
                 "dbhost":     "apps-postgres",
@@ -21,10 +32,9 @@
                 "secret":     "<generate-secret>",
                 "kubeSecretName": "tapis-apps-secrets",
                 "kubeSecretKey":  "postgres-password"
-            },
-            {
+            },            {
                 "tenant":     "{{skadmin_service_tenant_id}}",
-                "user":       "tapis",
+                "user":       "wow",
                 "secretName": "passwords",
                 "dbservice":  "pgadmin",
                 "dbhost":     "apps-postgres",
