--- a/templates/monitoring/apps/tapis-exporter.yml
+++ b/templates/monitoring/apps/tapis-exporter.yml
@@ -24,7 +24,7 @@ spec:
         - name: TAPIS_URL
           value: {{monitoring_service_url}}
         - name: TAPIS_SERVICES
-          value: value: '{{monitoring_services_list}}'
+          value: '{{monitoring_services_list}}'
         - name: STREAMS_DB
           value: 'StreamsDevDB'
         - name: META_USER
