--- a/templates/meta/api/restheart-security.yml
+++ b/templates/meta/api/restheart-security.yml
@@ -22,11 +22,11 @@ spec:
               name: meta-config
               key: site_id
         - name: TAPIS_META_SERVICE_TENANT_BASE_URL
-          value: https://admin.develop.tapis.io/
+          value: {{meta_service_url}}/
         - name: TAPIS_META_SERVICE_SK_SVC_URL
-          value: https://admin.develop.tapis.io/v3
+          value: {{meta_service_url}}/v3
         - name: TAPIS_META_SERVICE_TOKEN_BASE_URL
-          value: https://admin.develop.tapis.io/
+          value: {{meta_service_url}}/
         - name: TAPIS_META_CORE_SERVER
           value: http://restheart:8080/
         - name: TAPIS_SERVICE_PASSWORD
