--- a/templates/streams/streams-config.yml
+++ b/templates/streams/streams-config.yml
@@ -11,7 +11,8 @@ data:
     {
       "primary_site_admin_tenant_base_url": "{{streams_service_url}}",
       "service_admin_tenant_id": "{{streams_service_tenant_id}}",
-      "service_tenant_id": "{{streams_service_site_id}}",
+      "service_tenant_id": "{{streams_service_tenant_id}}",
+      "service_site_id": "{{streams_service_site_id}}",
       "service_name": "{{streams_service_name}}",
       "tenant": {{streams_tenant_info|tojson}},
       "tenants": {{streams_tenants|tojson}},
