--- a/templates/globus-proxy/globus-proxy-config.yml
+++ b/templates/globus-proxy/globus-proxy-config.yml
@@ -5,6 +5,7 @@ metadata:
 data:
   globus-proxy-config.json: |-
     {
+      "primary_site_admin_tenant_base_url": "{{globus_primary_site_admin_tenant_base_url}}",
       "service_site_id": "{{globus_proxy_site_id}}",
       "service_tenant_id": "{{globus_proxy_tenant_id}}",
       "service_name": "{{globus_proxy_name}}",
