setting hostname for restheart-mongo-host so replication comes up consistently every time

--- a/templates/meta/mongo/deploy.yml
+++ b/templates/meta/mongo/deploy.yml
@@ -11,6 +11,7 @@ spec:
       labels:
         app: restheart-mongo
     spec:
+      hostname: restheart-mongo
       containers:
         - name: restheart-mongo
           image: {{meta_mongo_restheart_image}}
