workflows to deployer

--- a/templates/proxy/nginx/nginx.conf
+++ b/templates/proxy/nginx/nginx.conf
@@ -356,5 +356,17 @@ http {
             proxy_set_header Host $host;
         }
 
+    # workflows
+        location /v3/workflows
+        {
+        {%- if "workflows" in proxy_nginx_service_list %}
+            proxy_pass http://workflows-api-service:8000;
+        {%- else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+        {%- endif %}        
+            proxy_redirect off;
+            proxy_set_header Host $host;
+        }
+
     }
 }
