--- a/.github/workflows/auto_build.yml
+++ b/.github/workflows/auto_build.yml
@@ -2,9 +2,9 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ test ]
+    branches: [ test,dev ]
   pull_request:
-    branches: [ test ]
+    branches: [ test,dev ]
 
 jobs:
 
@@ -13,14 +13,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
+    - name: Extract branch name
+      shell: bash
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: extract_branch
+
     - name: Checkout
       uses: actions/checkout@v3
+
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag mrghort/deployer-input-gen:test
+      run: docker build . --file Dockerfile --tag mrghort/deployer-input-gen:${{ steps.extract_branch.outputs.branch }}
+
     - name: Push the image to dockerhub
-      run: docker push mrghort/deployer-input-gen:test
+      run: docker push mrghort/deployer-input-gen:${{ steps.extract_branch.outputs.branch }}
