--- a/templates/workflows/rabbitmq/deployment.yml
+++ b/templates/workflows/rabbitmq/deployment.yml
@@ -23,7 +23,7 @@ spec:
           containerPort: 15672
         env:
         - name: RABBITMQ_DEFAULT_USER
-          value: {{workflows_rabbitmq_user}}
+          value: {{workflows_rabbitmq_username}}
         - name: RABBITMQ_DEFAULT_PASS
           valueFrom:
             secretRef:
