--- a/templates/workflows/pipelines/deployment.yml
+++ b/templates/workflows/pipelines/deployment.yml
@@ -16,7 +16,6 @@ spec:
       labels:
         app: workflows-pipelines-deployment
     spec:
-      serviceAccountName: {{workflows_k8s_service_account}}
       containers:
         - args:
             - python3
@@ -26,7 +25,7 @@ spec:
               value: workflows-api-service
             - name: BROKER_PASSWORD
               valueFrom:
-                secretRef:
+                secretKeyRef:
                   name: tapis-workflows-secrets
                   key: rabbitmq-password
             - name: BROKER_PORT
@@ -41,7 +40,7 @@ spec:
               value: tasks
             - name: DB_PASSWORD
               valueFrom:
-                secretRef:
+                secretKeyRef:
                   name: tapis-workflows-secrets
                   key: mysql-password
             - name: DB_PORT
@@ -50,8 +49,6 @@ spec:
               value: {{workflows_mysql_username}}
             - name: DEPLOYMENT_TYPE
               value: {{workflows_pipelines_deployment_type}}
-            - name: KUBERNETES_NAMESPACE
-              value: {{workflows_k8s_namespace}}
             - name: REGISTRY_HOST
               value: registry
             - name: REGISTRY_PORT
@@ -59,7 +56,7 @@ spec:
             - name: WORKFLOWS_SERVICE_URL
               value: {{workflows_service_url}}
             - name: WORKFLOWS_SERVICE_ACCOUNT
-              value: {{workflows_service_account}}
+              value: workflows
             - name: WORKFLOWS_SERVICE_PASSWORD
               valueFrom:
                 secretKeyRef:
