--- a/templates/pgrest/pgrest-config.yml
+++ b/templates/pgrest/pgrest-config.yml
@@ -7,6 +7,7 @@ data:
     {
       "service_site_url": "{{pgrest_service_url}}",
       "service_tenant_id": "{{pgrest_service_tenant_id}}",
+      "service_site_id": "{{pgrest_service_site_id}}",
       "site_id": "{{pgrest_service_site_id}}",
       "service_name": "{{pgrest_service_name}}",
       "primary_site_admin_tenant_base_url": "{{pgrest_service_url}}",
