--- a/templates/proxy/nginx/nginx.conf
+++ b/templates/proxy/nginx/nginx.conf
@@ -191,6 +191,9 @@ http {
         {
     #        auth_request /_auth;
         {%- if "meta" in proxy_nginx_service_list %}
+            if ($host = 'vdjserver.tapis.io'){
+               proxy_pass http://restheart-security-vdj:8080;
+            }
             proxy_pass http://restheart-security:8080;
         {%- else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
