--- a/templates/proxy/nginx/nginx.conf
+++ b/templates/proxy/nginx/nginx.conf
@@ -10,6 +10,52 @@ events {
     worker_connections  1024;
 }
 
+### Everything first goes through this stream stanza. Map matches subdomain to port to route to.
+### If no map found, we route to default 8443. This directs back to HTTP stanza as normal.
+stream {
+
+    log_format stream_routing '$remote_addr [$time_local] '
+                              'with SNI name "$ssl_preread_server_name" '
+                              'proxying to "$instanceport" '
+                              '$protocol $status $bytes_sent $bytes_received '
+                              '$session_time';
+
+    # 'map' maps input string to output variable. Regex works.
+    # Ports used are purely random. Feel free to change.
+    map $ssl_preread_server_name $instanceport {
+        # Route TCP with following whatever.pods.whatever.develop.tapis.ioto pods-nginx.
+        "~pods.*.develop.tapis.io"      5510;
+        # Else default to 8443 (listened to by http stanza).
+        default                         8443;
+    }
+ 
+    # pods_service. Route TCP to pods-nginx pod.
+    server {
+        listen                 5510;
+        ssl_preread            off;
+        proxy_timeout          600s;
+        access_log /dev/stdout stream_routing;
+    {%- if "pods" in proxy_nginx_service_list %}
+        proxy_pass             pods-nginx:80;
+    {%- else %}
+        # cgarcia- Unsure if this entire 'server' block should be in an if, or if we
+        # should what I'm doing here.
+        proxy_pass             {{proxy_primary_site_admin_tenant_base_url}};
+    {%- endif %}        
+
+    }
+
+    # Listen for all incoming requests. Preread server name (for mapping). Then pass. 
+    server {
+        listen                  443;
+        ssl_preread             on;
+        proxy_connect_timeout   20s;  # max time to connect to pserver
+        proxy_timeout           600s;
+        access_log /dev/stdout stream_routing;
+        proxy_pass              127.0.0.1:$instanceport;
+    }
+}
+
 
 http {
     include       /etc/nginx/mime.types;
@@ -52,13 +98,13 @@ http {
         # Permanent redirect to the secured site.
         return 301 https://$server_name$request_uri;
     }
-    
+
     # Configuration for the encrypted site.
     server
     {
     
-        listen 443 ssl http2;
-        listen [::]:443 ssl http2;
+        listen 8443 ssl http2;
+        listen [::]:8443 ssl http2;
     
         server_name  {{proxy_nginx_server_name}};
     
@@ -285,6 +331,18 @@ http {
             proxy_redirect off;
             proxy_set_header Host $host;
         }
+    # pods
+        location /v3/pods
+        {
+        {%- if "pods" in proxy_nginx_service_list %}
+            proxy_pass http://pods-nginx:80;
+        {%- else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+        {%- endif %}        
+            proxy_redirect off;
+            proxy_set_header Host $host;
+        }
+
 
 	# apps
         location /v3/apps
