Notifications: Fix rabbitmq passwd variable name.

--- a/templates/notifications/rabbitmq/deploy.yml
+++ b/templates/notifications/rabbitmq/deploy.yml
@@ -31,7 +31,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: tapis-notifications-secrets 
-              key: rabbitmq-tapis-password
+              key: rabbitmq-password
         - name: RABBITMQ_VM_MEMORY_HIGH_WATERMARK
           value: "2147483648"
         volumeMounts:
