--- a/inputgen/inputdescs/proxy_desc.yml
+++ b/inputgen/inputdescs/proxy_desc.yml
@@ -28,11 +28,18 @@ proxy_primary_site_admin_tenant_base_url:
 
 proxy_image_version:
   description: The version of the proxy API that you wish to deploy.
-  example: latesst, dev, stage, 1.0.0
+  example: latest, dev, stage, 1.0.0
   source_vars: 
     - proxy_image_version 
     - tapis_image_version
 
+site_router_image_version:
+  description: The version of the site-router API that you wish to deploy.
+  example: latest, dev, stage, 1.0.0
+  source_vars: 
+    - site_router_image_version 
+    - tapis_image_version
+  
 proxy_storage_class:
   description: Kubernetes storage class to use for peristent volume claim used to persist data written by the database.
   source_vars:
