Fix for pods. Using proxy_nginx_server_name for routing purposes

--- a/templates/proxy/nginx/nginx.conf
+++ b/templates/proxy/nginx/nginx.conf
@@ -24,7 +24,7 @@ stream {
     # Ports used are purely random. Feel free to change.
     map $ssl_preread_server_name $instanceport {
         # Route TCP with following whatever.pods.whatever.develop.tapis.ioto pods-nginx.
-        "~pods.*.develop.tapis.io"      5510;
+        "~pods.{{proxy_nginx_server_name}}"      5510;
         # Else default to 8443 (listened to by http stanza).
         default                         8443;
     }
