--- a/templates/workflows/mysql/mysql-init-config.yml
+++ b/templates/workflows/mysql/mysql-init-config.yml
@@ -1,9 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: mysql-init-config
+  name: workflows-mysql-init-configmap
 data:
-  init.sql: |
-    CREATE DATABASE IF NOT EXISTS workflows;
-    CREATE USER IF NOT EXISTS {{workflows_mysql_username}} IDENTIFIED BY "dev";
-    GRANT ALL PRIVILEGES ON workflows.* TO "{{workflows_mysql_username}}"
+  mysql-init.sh: |
+    mysql -uroot -p${MYSQL_ROOT_PASSWORD} << EOB
+    -- Create database and user if not exists
+    CREATE DATABASE IF NOT EXISTS ${MYSQL_DATABASE};
+    CREATE USER IF NOT EXISTS ${MYSQL_USER} IDENTIFIED BY "${MYSQL_PASSWORD}";
+    GRANT ALL PRIVILEGES ON ${MYSQL_DATABASE}.* TO "${MYSQL_USER}";
+    EOB
